correct home email link set better h4 colors clean up index page

--- a/_includes/home_sponsors.html
+++ b/_includes/home_sponsors.html
@@ -1,6 +1,6 @@
 <div class="KCP-sponsors" id="mail">
 
-  <p class="KCP-text"><i class="fa fa-envelope"></i> <a href="mailto:frank@taalservicelimburg.nl?subject=Info via de site">frank@taalservicelimburg.nl</a></p>
+  <p class="KCP-text"><a href="mailto:frank@taalservicelimburg.nl?subject=Info via de site"><i class="fa fa-envelope" style="none"></i> frank@taalservicelimburg.nl</a></p>
   <p class="KCP-text"><i class="fa fa-phone fa-2x"></i> +31 (0) 475 - 594993 &nbsp;&nbsp;&nbsp;<i class="fa fa-mobile fa-2x"></i> +31 (0) 6 - 30352006</p>
 
   <div class="KCP-actions">
