--- a/_sass/_docs.scss
+++ b/_sass/_docs.scss
@@ -61,7 +61,7 @@
   text-align: center;
 }
 .Docs h4 {
-  color: #3C5675;
+  color: #514335;
   font-size: 20px;
   font-weight: 300;
   font-family: 'Raleway';
