adding blog images adjust home_sponsors spacing correct G+ links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
       <span class="pull-left">Copyright © 2013 - {{ 'now' | date: "%m/%Y" }} <a href="{{ site.baseurl }}/">Taalservice</a></span>
       <span class="pull-right">
         <a href="https://www.facebook.com/taalservicelimburg/" target="blank"><i class="fa fa-facebook-official" title="FaceBook"></i></a>
-        <a href="https://plus.google.com/u/0/communities/116669111554447085724" target="blank"><i class="fa fa-google-plus" title="GPlus"></i></a>
+        <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fa fa-google-plus" title="GPlus"></i></a>
         <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fa fa-linkedin-square" title="LinkedIn"></i></a>
         <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fa fa-youtube" title="YouTube"></i></a>
         <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss" title="RSS feed"></i></a>
