--- a/_includes/screens.html
+++ b/_includes/screens.html
@@ -20,8 +20,8 @@
     <div class="screens-member">
       <h3>
         <a href="{{ site.baseurl }}/diensten">
-          <h3><i class="fa fa-microphone fa-3x"></i></h3>
-          Taalservice Limburg transcribeert
+          <h3><i class="fa fa-university fa-3x"></i></h3>
+          Taalservice Limburg coacht
         </a>
       </h3>
     </div>
