--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="fixed">
 <div class="social_header">
     <a href="https://www.facebook.com/taalservicelimburg/" target="blank"><i class="fa fa-facebook-official" title="FaceBook"></i></a>
-    <a href="https://plus.google.com/u/0/communities/116669111554447085724" target="blank"><i class="fa fa-google-plus" title="GPlus"></i></a>
+    <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fa fa-google-plus" title="GPlus"></i></a>
     <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fa fa-linkedin-square" title="LinkedIn"></i></a>
     <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fa fa-youtube" title="YouTube"></i></a>
     <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss" title="RSS feed"></i></a>
@@ -11,7 +11,7 @@
   <div class="container" id="header_wrap">
     <h1 class="Header-brand">
       <a href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/img/taal_logo.png" alt="{{ site.title }}" width="80">
+        <img src="{{ site.baseurl }}/img/taal_logo2.png" alt="{{ site.title }}" width="120">
       </a>
     </h1>
     
