rename transibeert.md stay in line with diensten.yaml adjust fa for screens remove obsolete dir in config.yaml

--- a/_includes/screens.html
+++ b/_includes/screens.html
@@ -12,7 +12,7 @@
     <div class="screens-member">
       <h3>
         <a href="{{ site.baseurl }}/diensten">
-          <h3><i class="fa  fa-text-height fa-3x"></i></h3>
+          <h3><i class="fa  fa-eraser fa-3x"></i></h3>
           Taalservice Limburg reviseert
         </a>
       </h3>
