hide test blog page correct diensten links

--- a/_includes/screens.html
+++ b/_includes/screens.html
@@ -2,7 +2,7 @@
   <div class="KCP-members">
     <div class="screens-member">
       <h3>
-        <a href="{{ site.baseurl }}/diensten">
+        <a href="{{ site.baseurl }}/diensten/vertaalt/">
           <h3><i class="fa fa-language fa-3x"></i></h3>
           Taalservice Limburg vertaalt
         </a>
@@ -11,7 +11,7 @@
 
     <div class="screens-member">
       <h3>
-        <a href="{{ site.baseurl }}/diensten">
+        <a href="{{ site.baseurl }}/diensten/reviseert/">
           <h3><i class="fa  fa-eraser fa-3x"></i></h3>
           Taalservice Limburg reviseert
         </a>
@@ -19,7 +19,7 @@
     </div>
     <div class="screens-member">
       <h3>
-        <a href="{{ site.baseurl }}/diensten">
+        <a href="{{ site.baseurl }}/diensten/coacht/">
           <h3><i class="fa fa-university fa-3x"></i></h3>
           Taalservice Limburg coacht
         </a>
