correct start date footer, adjust coach icon

--- a/_includes/screens.html
+++ b/_includes/screens.html
@@ -11,7 +11,7 @@
     <div class="screens-member">
       <h3>
         <a href="{{ site.baseurl }}/diensten/coacht/">
-          <h3><i class="fa fa-university fa-3x"></i></h3>
+          <h3><i class="fa fa-chalkboard-teacher fa-3x"></i></h3>
           Taalservice Limburg coacht
         </a>
       </h3>
