add font awesome 5 js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <script src="https://use.fontawesome.com/cbedfa5cad.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
   <!-- Crunchify's Scroll to Top Script -->
   <script src="/js/jquery.js"></script>
   </script>
