move most icons to FS 5

--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -1,19 +1,19 @@
 <div class="Actions" id="waarom">
   <div class="container">
     <div class="Actions-item">
-      <h3><i class="fa fa-question fa-2x"></i>Waarom?</h3>
+      <h3><i class="fas fa-question fa-2x"></i>Waarom?</h3>
       <p>Een professionele eerste indruk zorgt voor een betrouwbaar imago. Daarom zijn levendige, foutloze vertalingen en spraakmakende teksten zo belangrijk. Denk bijvoorbeeld maar eens aan websites, offertes of handleidingen. Met mijn bedrijf, Taalservice Limburg, help ik u om een krachtige boodschap uit te dragen en draag ik bij aan uw succes.</p>
       <h3>Professioneel</h3>
     </div>
 
     <div class="Actions-item">
-      <h3><i class="fa fa-gears fa-2x"></i>Hoe?</h3>
+      <h3><i class="fas fa-cogs fa-2x"></i>Hoe?</h3>
       <p>Door een grote betrokkenheid bij al mijn projecten. Ik durf kritische vragen te stellen om teksten zo goed mogelijk tot hun recht te laten komen en schroom niet om bij vertalingen kanttekeningen te plaatsen bij de brontekst en verbetervoorstellen te doen. Ik streef naar goede wederzijdse communicatie en houd van oprecht samenwerken.</a></p>
       <h3>Betrokken</h3>
     </div>
 
     <div class="Actions-item">
-      <h3><i class="fa fa-pencil fa-2x"></i>Wat?</h3>
+      <h3><i class="fas fa-pencil-alt fa-2x"></i>Wat?</h3>
       <p>Ik lever vertalingen van het Engels naar het Nederlands en ik lees Nederlandse teksten door, die ik vervolgens, samen met mijn opdrachtgever, corrigeer of bewerk. Ik richt me met name op commerciële teksten, waarbij een heldere, krachtige boodschap de lezer moet verleiden. Maar ook voor andere onderwerpen of aanvullende taaldiensten kunt u bij mij terecht.
 
 </p>
