--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class="fixed">
 <div class="social_header">
-    <a href="https://www.facebook.com/taalservicelimburg/" target="blank"><i class="fa fa-facebook-official" title="FaceBook"></i></a>
-    <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fa fa-google-plus" title="GPlus"></i></a>
-    <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fa fa-linkedin-square" title="LinkedIn"></i></a>
-    <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fa fa-youtube" title="YouTube"></i></a>
-    <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss" title="RSS feed"></i></a>
+    <a href="https://www.facebook.com/taalservicelimburg/" target="blank"><i class="fab fa-facebook-official" title="FaceBook"></i></a>
+    <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fab fab-google-plus" title="GPlus"></i></a>
+    <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fab fa-linkedin-square" title="LinkedIn"></i></a>
+    <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fab fa-youtube" title="YouTube"></i></a>
+    <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss" title="RSS feed"></i></a>
 </div>
     
 <header class="Header">
