--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,10 +16,10 @@
     <div class="Footer-copyright">
       <span class="pull-left">Copyright © 2017 - {{ 'now' | date: "%m/%Y" }} <a href="{{ site.baseurl }}/">Taalservice</a></span>
       <span class="pull-right">
-        <a href="https://www.facebook.com/taalservicelimburg/" target="blank"><i class="fab fa-facebook-official" title="FaceBook"></i></a>
-        <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fab fa-google-plus" title="GPlus"></i></a>
-        <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fab fa-linkedin-square" title="LinkedIn"></i></a>
-        <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fab fa-youtube" title="YouTube"></i></a>
+        <a href="https://www.facebook.com/taalservicelimburg/" target="blank"><i class="fab fa-facebook" title="FaceBook"></i></a>
+        <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fab fa-google-plus-square" title="GPlus"></i></a>
+        <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
+        <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fab fa-youtube-square" title="YouTube"></i></a>
         <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss" title="RSS feed"></i></a>
       </span>
       <a href="#" class="crunchify-top"><i class="fas fa-chevron-up custom" ></i></a>
