header and footer rss square

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
         <a href="https://plus.google.com/+QuWiCoHaelen" target="blank"><i class="fab fa-google-plus-square" title="GPlus"></i></a>
         <a href="https://www.linkedin.com/in/frankvanderschuren/" target="blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a>
         <a href="https://www.youtube.com/channel/UCDpKvRJy8qCzjyHX01ZQnfA" target="blank"><i class="fab fa-youtube-square" title="YouTube"></i></a>
-        <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss" title="RSS feed"></i></a>
+        <a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss-square" title="RSS feed"></i></a>
       </span>
       <a href="#" class="crunchify-top"><i class="fas fa-chevron-up custom" ></i></a>
     </div>
