set seperate home sections for coach & translate remove video, add image, actions & screens renamed

--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -1,8 +1,16 @@
-<div class="Actions" id="waarom">
+<div class="screens-member">
+  <h3>
+    <a href="{{ site.baseurl }}/diensten/coacht/">
+      <h3><i class="fa fa-language fa-3x"></i></h3>
+      Taalservice Limburg – vertalingen
+    </a>
+  </h3>
+</div>
+<div class="Actions" id="vertalen">
   <div class="container">
     <div class="Actions-item">
       <h3><i class="fas fa-question fa-2x"></i>Waarom?</h3>
-      <p>Een professionele eerste indruk zorgt voor een betrouwbaar imago. Daarom zijn levendige, foutloze vertalingen en spraakmakende teksten zo belangrijk. Denk bijvoorbeeld maar eens aan websites, offertes of handleidingen. Met mijn bedrijf, Taalservice Limburg, help ik u om een krachtige boodschap uit te dragen en draag ik bij aan uw succes.</p>
+      Een professionele eerste indruk zorgt voor een betrouwbaar imago. Daarom zijn levendige, foutloze vertalingen en spraakmakende teksten zo belangrijk. Denk bijvoorbeeld maar eens aan websites, offertes of handleidingen. Met mijn bedrijf, Taalservice Limburg, help ik u om een krachtige boodschap uit te dragen en draag ik bij aan uw succes.</p>
       <h3>Professioneel</h3>
     </div>
 
@@ -14,9 +22,7 @@
 
     <div class="Actions-item">
       <h3><i class="fas fa-pencil-alt fa-2x"></i>Wat?</h3>
-      <p>Ik lever vertalingen van het Engels naar het Nederlands en ik lees Nederlandse teksten door, die ik vervolgens, samen met mijn opdrachtgever, corrigeer of bewerk. Ik richt me met name op commerciële teksten, waarbij een heldere, krachtige boodschap de lezer moet verleiden. Maar ook voor andere onderwerpen of aanvullende taaldiensten kunt u bij mij terecht.
-
-</p>
+      <p>Ik lever vertalingen van het Engels naar het Nederlands en ik lees Nederlandse teksten door, die ik vervolgens, samen met mijn opdrachtgever, corrigeer of bewerk. Ik richt me met name op commerciële teksten, waarbij een heldere, krachtige boodschap de lezer moet verleiden. Maar ook voor andere onderwerpen of aanvullende taaldiensten kunt u bij mij terecht.</p>
       <h3>Helder</h3>
     </div>
   </div>
