--- a/_includes/screens.html
+++ b/_includes/screens.html
@@ -1,20 +1,38 @@
 <div class="KCP">
   <div class="KCP-members">
-    <div class="screens-member">
+    <div class="screens-member" id="coaching">
       <h3>
         <a href="{{ site.baseurl }}/diensten/vertaalt/">
-          <h3><i class="fa fa-language fa-3x"></i></h3>
-          Taalservice Limburg vertaalt
-        </a>
-      </h3>
-    </div>
-    <div class="screens-member">
-      <h3>
-        <a href="{{ site.baseurl }}/diensten/coacht/">
           <h3><i class="fas fa-chalkboard-teacher fa-3x"></i></h3>
-          Taalservice Limburg coacht
+          Taalservice Limburg – lesgeven en coaching
         </a>
       </h3>
+      <div class="container">
+        <div class="">
+          <h3><i class="fas fa-question fa-2x"></i>Waarom?</h3>
+          Als NT2-docent vind ik het belangrijk dat zowel mijn cursisten als mijn
+          opdrachtgevers tevreden zijn. Professionele communicatie is daarbij essentieel.
+          Regelmatig evalueren en, waar nodig, de inhoud van het lesprogramma
+          tussentijd aanpassen zijn voor mij vanzelfsprekend. Een goed resultaat staat
+          voorop.</p>
+        </div>
+        <div class="">
+          <h3><i class="fas fa-cogs fa-2x"></i>Hoe?</h3>
+          <p>Mijn lessen zijn altijd maatwerk. Ik vind het belangrijk om de inhoud af te
+          stemmen op de wens van de opdrachtgever, maar ook om de individuele
+          wensen van de cursisten niet uit het oog verliezen. Met voldoende variatie in het
+          soort oefeningen en met de nodige humor probeer ik mijn lessen leuk en de
+          cursisten betrokken te houden.</a></p>
+        </div>
+        <div class="">
+          <h3><i class="fas fa-pencil-alt fa-2x"></i>Wat?</h3>
+          <p>Mijn opdrachtgevers komen uit het bedrijfsleven; bedrijven die hun buitenlandse
+          werknemers en expats de mogelijkheid willen bieden om Nederlands te leren,
+          gemeentes die via een werkloket de arbeidskansen van buitenlandse migranten
+          willen vergroten, maar ook andere partijen met vaak specifieke taalvragen
+          kloppen bij mij aan.</p>
+          <h3>Helder</h3>
+        </div>
     </div>
   </div>
 </div>
