--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -186,7 +186,7 @@
 }
 .KCP-member {
   display: inline-block;
-  width: 190px;
+  //width: 190px;
   vertical-align: top;
 }
 .KCP-member a:hover {
@@ -200,7 +200,7 @@
   border: 0;
   color: #514335;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 16px;
 }
 .KCP-member h3 img {
   display: block;
@@ -208,8 +208,9 @@
 }
 .KCP-member h4 {
   font-weight: 300;
-  font-size: 16px;
-  margin: 0;
+  font-size: 20px;
+  color: #4D4D4D;
+  margin: 0 0 10px;
   font-family: 'Raleway';
 }
 .KCP-text {
@@ -232,9 +233,11 @@
 }
 
 .screens-member {
-  display: inline-block;
-  width: 280px;
-  vertical-align: top;
+  width: 33%;
+  padding: 0 35px;
+  box-sizing: border-box;
+  float: left;
+  text-align: left;
 }
 .screens-member h3 {
   margin: 0;
@@ -273,6 +276,16 @@
 .Actions {
   background: #f6f4f1;
   padding: 60px 0;
+  text-align: center;
+}
+.Actions h3 a {
+  border: 0;
+  color: #514335;
+  font-weight: 300;
+  font-size: 16px;
+}
+.Actions h3 a:hover {
+  color: #c7b9aa;
 }
 .Actions-item {
   width: 33%;
@@ -309,7 +322,7 @@
     margin-bottom: 30px;
     padding: 0;
   }
-  .screens-memeber {
+  .screens-member {
     width: auto;
     float: none;
     margin-bottom: 30px;
