adding CRKBO image floating left on home page & added to footer with link remove vertalen from diensten

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="Footer-social">
 
-      <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZHFD62TKTTWQN" target="blank"><img src="{{ site.baseurl }}/img/paypal.png" alt="PayPal - The safer, easier way to pay online!" title="Pay through PayPal" border="0" width="150px"></a> -->
+      <a href="https://www.crkbo.nl/" target="blank"><img src="{{ site.baseurl }}/img/crkbo.jpg" alt="CRKBO Gecertificeerd" title="CRKBO Gecertificeerd" border="0" width="100px"></a>
     </div>
 
     <div class="Footer-nav">
